kubernetes/prometheus/prometheus-nfs.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    name: prometheus-StatefulSet
  name: prometheus
  namespace: monitor
spec:
  replicas: 1
  serviceName: "prometheus"
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - image: prom/prometheus:v2.34.0
        name: prometheus
        command:
        - "/bin/prometheus"
        args:
        - "--config.file=/etc/prometheus/prometheus.yml"
        # 是否开启 Basic Auth 认证
        # - "--web.config.file=/etc/prometheus/web.yml"
        - "--storage.tsdb.path=/prometheus"
        - "--storage.tsdb.retention=24h"
        - "--web.enable-lifecycle"
        ports:
        - containerPort: 9090
          protocol: TCP
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "1"
            memory: "2Gi"

        volumeMounts:
        - name: data
          mountPath: "/prometheus"
        # 这种方式挂载，会将原始目录整个挂载，也就是看不到原始的文件了。
        # - name: prometheus-config
        #   mountPath: /etc/prometheus
        - name: prometheus-config                       # volumes的名字
          mountPath: /etc/prometheus/prometheus.yml     # 容器内的目录或文件(正确挂载configmap时为文件)
          subPath: prometheus_config                    # 指定configmap里面的path
        - name: prometheus-config
          mountPath: /etc/prometheus/web.yml
          subPath: web_auth_config
      volumes:
      # 同一个configmap里面的多个key， 挂载到同一个目录下的不同文件
      - name: prometheus-config
        configMap:
          name: prometheus-config
          # 下面的item可以省略，省略就是挂载所有configmap里面的key
          items:
            - key: prometheus.yml               # key就是configmap里面的文件名
              path: prometheus_config
            - key: web.yml
              path: web_auth_config


  # StatefulSet 才可用 volumeClaimTemplates
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
        volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 30Gi
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: monitor
spec:
  # type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    # nodePort: 30090
  selector:
    app: prometheus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitor
  annotations:
    # kubernetes.io/ingress.class: "internet-nginx"   注解马上废弃
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: internet
  tls:
  - hosts:
    - prometheus.i.com
    secretName: i-com
  rules:
  - host: prometheus.i.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
